# decidish

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: node.js.yml
backend/authorization/: Dockerfile  go.mod  go.sum  server.go
backend/core/: .gitignore  Dockerfile  build.gradle
backend/personalization/: .gitignore  Dockerfile  go.mod  go.sum  main.go  setup.go
bruno/: bruno.json
bruno/auth/: login_failure.bru  login_success.bru  register user.bru
bruno/mlpipeline/: create_embedding.bru  folder.bru  user_embedding.bru
bruno/personalization/: folder.bru  like_action.bru  recommend_recipe.bru  user_preference.bru
client/: Dockerfile  global.css  package-lock.json  package.json  tsconfig.json
client/api/: auth_client.ts  recipeClient.ts  recipe_client.ts  user_pref_client.ts
client/app/: _layout.tsx  index.tsx
client/components/: carditem.tsx  profileitem.tsx  recipe.tsx  sign-in-form.tsx  sign-up-form.tsx  temp.tsx
client_mockup/: App.js  app.json  package-lock.json  package.json
client_mockup/components/: CardItem.js  City.js  Icon.js  ProfileItem.js  Recipe.js
client_mockup/containers/: Home.js  Matches.js  (+2 more)
mlpipeline/: .gitignore  Dockerfile  clean_recipe.py  environment.yaml  pyproject.toml
mlpipeline/data/: data_cleaning.py  ingredients.txt  readme.md  user_embedding.py
mlpipeline/data/cleaned/: requests.csv  reviews.csv
mlpipeline/mlpipeline/: app.py  model.py
mlpipeline/pretrian/: clean_recipe.py  dataloader.py  preference.py
(+122 files in other folders)
