[tool.poetry]
name = "mlpipeline"
version = "0.1.0"
description = ""
authors = ["sarpsahinalp <sarp.sahinalp@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
psycopg2-binary = "^2.9.9" # Required for Postgres connection
asyncpg = "^0.31.0"
pgvector = "^0.4.2"
sentence-transformers = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"